fix: unwanted css blockquote resizing on mobile

--- a/website/css/stylesheet-mobile-override.css
+++ b/website/css/stylesheet-mobile-override.css
@@ -1,5 +1,6 @@
 .flex-grid {
 	& blockquote {
 		max-width: 100%;
+		width: 100%;
 	}
 }
